comenzamos el style del  home

--- a/view/indextp.html
+++ b/view/indextp.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>QuoterApp</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="bg-[#3674B5]">
-    <div class="flex items-center  p-10 ">
-        <h1 class="text-8xl text-white font-sans font-bold inline-block m-auto"> Quoter </h1>
-    </div>
+<body>
+    
+
     <div>
-
-
+        <div class="p-2">
+            <h1 class="text-white text-9xl roboto-uniquifier font-bold  "> Quoter </h1>
+        </div>
     </div>
+    <!-- <div>
+
+        <form action="" method="get">
+            <table>
+                <tr></tr>
+            </table>
+        </form>
+
+    </div> -->
     
 </body>
 </html>
