inicio de tabla de parametros

--- a/view/indextp.html
+++ b/view/indextp.html
@@ -1,3 +1,4 @@
+<!-- tailwindcss v4 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,21 +10,18 @@
 </head>
 <body>
     
-
-    <div>
-        <div class="p-2">
-            <h1 class="text-white text-9xl roboto-uniquifier font-bold  "> Quoter </h1>
+    <div class="h-full w-full flex flex-row-reverse items-center">
+        <div class="m-10 p-10 flex ">
+            <h1 class="text-[#D1F8EF] text-8xl roboto-uniquifier font-bold  ">Quoter</h1>
+        </div>
+        
+        <div class="flex border-solid border-3 border-[#3674B5] bg-[#D1F8EF] rounded-full">
+            <a  class=" text-2xl text-[#3674B5] px-4 py-2 font-semibold roboto-uniquifier" href="quoter.html"
+            id="getStarted">Get Started</a>
         </div>
     </div>
-    <!-- <div>
+    
 
-        <form action="" method="get">
-            <table>
-                <tr></tr>
-            </table>
-        </form>
-
-    </div> -->
     
 </body>
 </html>
