--- a/view/css/style.css
+++ b/view/css/style.css
@@ -4,15 +4,14 @@
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings:"wdth" 100;
 }
 
 body {
-      background-image: url('../images/image1.jpg');
-      background-size: cover;
-      background-attachment: fixed;
-      background-position: center;
-      min-height: 100%;
-      min-width: 100%;
+  background-image: url('../images/image1.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
 }
