--- a/view/css/style.css
+++ b/view/css/style.css
@@ -7,8 +7,56 @@
   font-variation-settings:"wdth" 100;
 }
 
-body {
+.bodyHome{
   background-image: url('../images/image1.jpg');
+}
+
+.headerTableInput{
+  background-color: #D9D9D9;
+}
+
+.headTableInput1{
+  background-color: #BDD7EE;
+  text-align: start;
+  padding-left: 5px;
+}
+
+.cardInput{
+  display: flex;
+  flex-direction: column;
+  flex-basis: 20%;
+  align-items: center;
+  margin: 5px;
+}
+.cardInputHead{
+  background-color: #BDD7EE;
+  display: flex;
+  flex-basis: calc(1/2 * 100%);
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+th{
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+strong{
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.cardInputData{
+  flex-basis: calc(1/2 * 100%);
+}
+
+.buttonSend{
+  background-color: #BDD7EE;
+  display: inline-block;
+}
+
+body {  
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
