--- a/view/index.ejs
+++ b/view/index.ejs
@@ -8,7 +8,7 @@
     <title>QuoterApp</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
+<body class="bodyHome">
     
     <div class="h-full w-full flex flex-row-reverse items-center">
         <div class="m-10 p-10 flex ">
