--- a/view/quoter.ejs
+++ b/view/quoter.ejs
@@ -4,103 +4,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Quoter</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 <body>
 
-    <div>
-        <h2>Parametros Quoter</h2>
-        <form action="/parametros" method="POST">
-            <table>
-                <tr>
-                    <td>Client:</td>
-                    <td><input type="text" name="client" id="client"></td>
-                </tr>
-                <tr>
-                    <td>Country:</td>
-                    <td><input type="text" name="country" id="country" ></td>
-                </tr>
-                <!-- <tr>
-                    <td>Proposal Manager:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>HUGUES T19 Number of Sites:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Sites out of coverage:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Number of Sites:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Remote Spares:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Total of Spares:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Service Plan:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Total Capacity SES-17(Mbps):</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Overbooking:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Total Ka Band Capacity(Mbps):</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Average Mbps per Site:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Valor Cambio(SOL a USD):</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Terminal Unit Price(USD) - ExWorks USA:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>COST - SES Ka band Mbps/ Month(USD):</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>COST - HUGUES Ka band Mbps/ Month(USD):</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>Contract:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>% sites with Penalties / Month:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>CAPEX Financing Rate:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr>
-                <tr>
-                    <td>UIT:</td>
-                    <td><input type="text" name="" id=""></td>
-                </tr> -->
-            </table>
-            <button type="submit">Enviar</button>
-        </form>
+    <div class="flex p-2">
+        <form class="flex flex-row" action="/parametros" method="POST">
+            <div class="flex basis-1/3">
+                <table class="table-auto border-collapse">
+                    <thead>
+                        <tr>
+                            <th colspan="2" class="headerTableInput border">
+                                <span class="text-3xl roboto-uniquifier font-semibold ">Parametros Quoter</span>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th class="headTableInput1 border">Cliente:</th>
+                            <td class="border"><input type="text" name="client" id="client"></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">País:</th>
+                            <td class="border"><input type="text" name="country" id="country" ></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Gerente de propuestas:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">HUGUES T19 Número de Sitios:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Sitios Fuera de Cobertura:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Número de Sitios:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Repuestos Remotos:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Total de Repuestos:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>                        
+                        <tr>
+                            <th class="headTableInput1 border">Capacidad Total SES-17(Mbps):</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Overbooking:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Capacidad total de banda Ka(Mbps):</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Mbps promedio por sitio:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Valor Cambio(SOL a USD):</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Precio unitario terminal (USD) - ExWorks USA:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">COSTO - Banda Ka SES Mbps/Mes (USD):</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">COSTO - HUGUES Banda Ka Mbps/Mes (USD):</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Contrato:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">% sitios con penalizaciones / mes:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">Tasa de financiamiento de CAPEX:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                        <tr>
+                            <th class="headTableInput1 border">UIT:</th>
+                            <td class="border"><input type="text" name="" id=""></td>
+                        </tr>
+                    </tbody>
+                </table>                     
+            </div>
+            <div class="flex flex-col basis-2/3 flex-wrap ml-3 overflow-auto">
+                <div class="flex flex-col">
 
+                    <div class="flex flex-row justify-center">
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Tipo</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>           
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Categoría</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Subcategoría</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Manufacturer-Part</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                    </div>
+
+                    <div class="flex flex-row justify-center">
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Product Code</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>           
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Description</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Qty</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Unit of Measure</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                    </div>
+
+                    <div class="flex flex-row justify-center">
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Discount</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>           
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Finance</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>          
+                        <div class="cardInput">
+                            <div class="cardInputHead">
+                                <strong>Owner</strong>
+                            </div>                        
+                            <input class="cardInputData" type="text">
+                        </div>             
+                    </div>                    
+                </div>
+                <div  class="buttonSend">
+                    <button type="submit">Enviar</button>
+                </div>
+            </div>            
+        </form>
     </div>
 
 </body>
