--- a/view/css/style.css
+++ b/view/css/style.css
@@ -1,10 +1,55 @@
-
 .roboto-uniquifier{
   font-family: "Roboto", sans-serif;
   font-optical-sizing: auto;
   font-weight: weight;
   font-style: normal;
   font-variation-settings:"wdth" 100;
+}
+body {  
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
+
+table tr td{
+  border: 1px solid #c9c8c8;
+  border-collapse: collapse;
+}
+
+table tr th{
+  font-size: 1.1rem;
+  font-weight: 600;
+  border: 1px solid #D1F8EF;
+}
+
+strong{
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  display: inline-block;
+  width: fit-content;
+}
+
+button{
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+}
+
+input{
+  width: fit-content;
+  display: block;
+}
+
+.buttoEnviar{
+  width: 5rem;
+  height: 3rem;
+  background-color: #BDD7EE;
+  display: flex;
+  border: solid 1px #D9D9D9;
+  border-radius: 15px;
 }
 
 .bodyHome{
@@ -13,53 +58,67 @@
 
 .headerTableInput{
   background-color: #D9D9D9;
+  border: 1px solid rgba(0, 0, 0, 0.500);
 }
 
-.headTableInput1{
+.headTableInput{
   background-color: #BDD7EE;
   text-align: start;
   padding-left: 5px;
 }
 
 .cardInput{
+  width: initial;
+  overflow: hidden;
+  height: 6rem;
   display: flex;
   flex-direction: column;
-  flex-basis: 20%;
   align-items: center;
-  margin: 5px;
+  border: solid 1px #D9D9D9;
 }
+
 .cardInputHead{
+  width: fit-content;
+  min-width: 5rem;
+  max-width: 8rem;
+  padding: 0.5rem 1rem;
   background-color: #BDD7EE;
-  display: flex;
+  display: inline-block;
   flex-basis: calc(1/2 * 100%);
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-th{
-  font-size: 1.1rem;
-  font-weight: 600;
-}
-
-strong{
-  font-size: 1.2rem;
-  font-weight: 600;
+  text-align: center;
 }
 
 .cardInputData{
   flex-basis: calc(1/2 * 100%);
+  width: inherit;
 }
 
-.buttonSend{
-  background-color: #BDD7EE;
-  display: inline-block;
+.buttonMas{
+  width: 30px;
+  height: 30px;
+  background-color: #4CAF50;
+  color: white;
+  font-size: 2rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
-body {  
-  background-size: cover;
-  background-attachment: fixed;
-  background-position: center;
-  height: 100vh;
-  width: 100%;
+.buttonMenos{
+  width: 30px;
+  height: 30px;
+  background-color: #C00000;
+  color: white;
+  font-size: 2rem;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
