--- a/view/quoter.ejs
+++ b/view/quoter.ejs
@@ -11,180 +11,15 @@
 <body>
 
     <div class="flex p-2">
-        <form class="flex flex-row" action="/parametros" method="POST">
-            <div class="flex basis-1/3">
-                <table class="table-auto border-collapse">
-                    <thead>
-                        <tr>
-                            <th colspan="2" class="headerTableInput border">
-                                <span class="text-3xl roboto-uniquifier font-semibold ">Parametros Quoter</span>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th class="headTableInput1 border">Cliente:</th>
-                            <td class="border"><input type="text" name="client" id="client"></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">País:</th>
-                            <td class="border"><input type="text" name="country" id="country" ></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Gerente de propuestas:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">HUGUES T19 Número de Sitios:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Sitios Fuera de Cobertura:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Número de Sitios:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Repuestos Remotos:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Total de Repuestos:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>                        
-                        <tr>
-                            <th class="headTableInput1 border">Capacidad Total SES-17(Mbps):</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Overbooking:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Capacidad total de banda Ka(Mbps):</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Mbps promedio por sitio:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Valor Cambio(SOL a USD):</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Precio unitario terminal (USD) - ExWorks USA:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">COSTO - Banda Ka SES Mbps/Mes (USD):</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">COSTO - HUGUES Banda Ka Mbps/Mes (USD):</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Contrato:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">% sitios con penalizaciones / mes:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">Tasa de financiamiento de CAPEX:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                        <tr>
-                            <th class="headTableInput1 border">UIT:</th>
-                            <td class="border"><input type="text" name="" id=""></td>
-                        </tr>
-                    </tbody>
-                </table>                     
+        <form class="flex flex-col " action="/parametros" method="POST" id="formParametros">
+            <div class="flex basis-1/5">                
             </div>
-            <div class="flex flex-col basis-2/3 flex-wrap ml-3 overflow-auto">
-                <div class="flex flex-col">
-
-                    <div class="flex flex-row justify-center">
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Tipo</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>           
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Categoría</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Subcategoría</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Manufacturer-Part</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                    </div>
-
-                    <div class="flex flex-row justify-center">
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Product Code</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>           
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Description</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Qty</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Unit of Measure</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                    </div>
-
-                    <div class="flex flex-row justify-center">
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Discount</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>           
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Finance</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>          
-                        <div class="cardInput">
-                            <div class="cardInputHead">
-                                <strong>Owner</strong>
-                            </div>                        
-                            <input class="cardInputData" type="text">
-                        </div>             
-                    </div>                    
-                </div>
-                <div  class="buttonSend">
-                    <button type="submit">Enviar</button>
+            <div class="flex flex-col basis-4/5 items-center ">
+                <div class= "flex flex-col ">                    
+                    <%- include("inputsParameters/filaParametros") %>
+                </div>    
+                <div  class="buttoEnviar basis-1/4">
+                    <button type="submit" form="formParametros" class="roboto-uniquifier">Enviar</button>
                 </div>
             </div>            
         </form>
