--- a/view/inputsParameters/filaParametros.ejs
+++ b/view/inputsParameters/filaParametros.ejs
@@ -4,7 +4,10 @@
         <div class="cardInputHead">
             <strong>Tipo</strong>
         </div>
-        <input class="cardInputData" type="text" name="tipo" id="tipo">
+        <div class="cardInputData">
+            <input type="text" name="tipo" id="tipo">
+        </div>
+        
     </div>
     <!-- <div class="cardInput">
         <div class="cardInputHead">
