--- a/view/inputsParameters/filaParametros.ejs
+++ b/view/inputsParameters/filaParametros.ejs
@@ -1,89 +1,68 @@
-<div class="flex flex-row justify-center">
-
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Tipo</strong>
-        </div>
-        <div class="cardInputData">
-            <input type="text" name="tipo" id="tipo">
-        </div>
-        
-    </div>
-    <!-- <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Categoría</strong>
-        </div>
-        <input class="cardInputData" type="text" name="categoria" id="categoria">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Subcategoría</strong>
-        </div>
-        <input class="cardInputData" type="text" name="subcategoria" id="subcategoria">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Manufacturer-Part</strong>
-        </div>
-        <input class="cardInputData" type="text" name="manufacturerPart" id="manufacturerPart">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Codigo Producto</strong>
-        </div>
-        <input class="cardInputData" type="text" name="productCode" id="productCode">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Descripción</strong>
-        </div>
-        <input class="cardInputData" type="text" name="description" id="description">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Qty</strong>
-        </div>
-        <input class="cardInputData" type="text" name="qty" id="qty">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Unidad de Medida</strong>
-        </div>
-        <input class="cardInputData" type="text" name="unitMeasure" id="unitMeasure">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Descuento</strong>
-        </div>
-        <input class="cardInputData" type="text" name="discount" id="discount">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Financiamiento</strong>
-        </div>
-        <input class="cardInputData" type="text" name="finance" id="finance">
-    </div>
-    <div class="cardInput">
-        <div class="cardInputHead">
-            <strong>Dueño</strong>
-        </div>
-        <input class="cardInputData" type="text" name="owner" id="owner">
-
-    </div>
-    <div> -->
-        <div class="buttonMenos">
-            <button type="" form="" >
-                -
-            </button>
-        </div>
-    </div>
-    
-</div>
-
 <div>
+  <table class="table-auto border-collapse w-full min-w-max">
+    <thead>
+      <tr>
+        <th class="cardInputHead"><strong>Tipo</strong></th>
+        <th class="cardInputHead"><strong>Categoría</strong></th>
+        <th class="cardInputHead"><strong>Subcategoría</strong></th>
+        <th class="cardInputHead"><strong>Pieza del Fabricante</strong></th>
+        <th class="cardInputHead"><strong>Codigo Producto</strong></th>
+        <th class="cardInputHead"><strong>Descripción</strong></th>
+        <th class="cardInputHead"><strong>Cantidad</strong></th>
+        <th class="cardInputHead"><strong>Unidad de Medida</strong></th>
+        <th class="cardInputHead"><strong>Descuento</strong></th>
+        <th class="cardInputHead"><strong>Financiamiento</strong></th>
+        <th class="cardInputHead"><strong>Dueño</strong></th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="cardInputData">
+          <input type="text" name="Tipo" id="Tipo" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Categoria" id="Categoria" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Subcategoria" id="Subcategoria" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="PiezaFabricante" id="PiezaFabricante" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="CodigoProducto" id="CodigoProducto" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Descripcion" id="Descripcion" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Cantidad" id="Cantidad" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="UnidadMedida" id="UnidadMedida" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Descuento" id="Descuento" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Financiamiento" id="Financiamiento" />
+        </td>
+        <td class="cardInputData">
+          <input type="text" name="Dueño" id="Dueño" />
+        </td>
+        <td class="tdBoton">
+          <div class="buttonMenos">
+            <button type="" form="">-</button>
+          </div>
+        </td>
+      </tr>
+    </tbody>    
+  </table>
+  <div>
     <div class="buttonMas">
-        <button type="" form="" >
-            +
-        </button>
+      <button type="" form="">+</button>
     </div>
+  </div>
 </div>
+
+
