--- a/view/inputsParameters/tablaParametros.ejs
+++ b/view/inputsParameters/tablaParametros.ejs
@@ -1,4 +1,4 @@
-<table class="table-auto">
+<table class="table-auto table-visible" id="tabla">
   <thead>
     <tr>
       <th colspan="2" class="headerTableInput border">
