--- a/view/quoter.ejs
+++ b/view/quoter.ejs
@@ -14,9 +14,9 @@
         <form action="/parametros" method="POST" id="formParametros">
             <div class="flex basis-1/5 items-center">   
                 <div class="button">
-                    <button id="MostrarParametros" type="button">Mostrar Parametros</button>
+                    <button id="mostrarParametros" type="button">Mostrar Parametros</button>
                 </div>                
-                <!-- include("inputsParameters/tablaParametros") -->
+                <%- include("inputsParameters/tablaParametros") %>
             </div>
             <div class="flex flex-col basis-4/5 items-center">
                 <%- include("inputsParameters/filaParametros") %>
