obtencion de precio unitario

--- a/view/quoter.ejs
+++ b/view/quoter.ejs
@@ -11,12 +11,12 @@
 
     <div class="flex flex-col p-2">
         <form action="/parametros" method="POST" id="formParametros">
-            <div class="flex flex-row justify-center items-center my-10">   
+            <!-- <div class="flex flex-row justify-center items-center my-10">   
                 <div class="button">
                     <button id="mostrarParametros" type="button">Mostrar Parametros</button>
                 </div>            
-                <%- include("inputsParameters/tablaParametros") %>
-            </div>
+                
+            </div> -->
             <div class="flex flex-col items-center">
                 <%- include("inputsParameters/filaParametros") %>
                 <div  class="buttonEnviar">
