--- a/view/inputsParameters/filaParametros.ejs
+++ b/view/inputsParameters/filaParametros.ejs
@@ -2,54 +2,58 @@
   <table class="table-auto border-collapse w-full min-w-max" id="tableRows">
     <thead>
       <tr>
-        <th class="cardInputHead"><strong>Tipo</strong></th>
+        <!-- <th class="cardInputHead"><strong>Tipo</strong></th>
         <th class="cardInputHead"><strong>Categoría</strong></th>
-        <th class="cardInputHead"><strong>Subcategoría</strong></th>
+        <th class="cardInputHead"><strong>Subcategoría</strong></th> -->
         <th class="cardInputHead"><strong>Pieza del Fabricante</strong></th>
+        <!-- <th class="cardInputHead"><strong>Margen</strong></th>
         <th class="cardInputHead"><strong>Codigo Producto</strong></th>
         <th class="cardInputHead"><strong>Descripción</strong></th>
         <th class="cardInputHead"><strong>Cantidad</strong></th>
         <th class="cardInputHead"><strong>Unidad de Medida</strong></th>
         <th class="cardInputHead"><strong>Descuento</strong></th>
         <th class="cardInputHead"><strong>Financiamiento</strong></th>
-        <th class="cardInputHead"><strong>Dueño</strong></th>
+        <th class="cardInputHead"><strong>Dueño</strong></th> -->
       </tr>
     </thead>
     <tbody id="tbodyRows">
       <tr>
-        <td class="cardInputData">
-          <input required type="text" name="Tipo" id="Tipo" />
+        <!-- <td class="cardInputData">
+          <input required type="text" name="tipo" id="tipo" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="Categoria" id="Categoria" />
+          <input required type="text" name="categoria" id="categoria" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="Subcategoria" id="Subcategoria" />
+          <input required type="text" name="subcategoria" id="subcategoria" />
+        </td> -->
+        <td class="cardInputData">
+          <input required type="text" name="piezaFabricante" id="piezaFabricante" />
+        </td>
+        <!-- <td class="cardInputData">
+          <input required type="text" name="margen" id="margen" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="PiezaFabricante" id="PiezaFabricante" />
+          <input required type="text" name="codigoProducto" id="codigoProducto" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="CodigoProducto" id="CodigoProducto" />
+          <input required type="text" name="descripcion" id="descripcion" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="Descripcion" id="Descripcion" />
+          <input required type="number" class="inputNumber" name="cantidad" id="cantidad" />
         </td>
         <td class="cardInputData">
-          <input required type="number" class="inputNumber" name="Cantidad" id="Cantidad" />
+          <input required type="text" name="unidadMedida" id="unidadMedida" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="UnidadMedida" id="UnidadMedida" />
+          <input required type="number" class="inputNumber" name="descuento" id="descuento" />
         </td>
         <td class="cardInputData">
-          <input required type="number" class="inputNumber" name="Descuento" id="Descuento" />
+          <input required type="text" name="financiamiento" id="financiamiento" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="Financiamiento" id="Financiamiento" />
-        </td>
-        <td class="cardInputData">
-          <input required type="text" name="Dueño" id="Dueño" />
-        </td>
+          <input required type="text" name="dueño" id="dueño" />
+        </td> -->
         <td class="tdBoton" id="tdBoton">          
           <div class="buttonMenos">
             <button type="button" class="tdMenos" form="">-</button>
