--- a/view/inputsParameters/filaParametros.ejs
+++ b/view/inputsParameters/filaParametros.ejs
@@ -2,26 +2,26 @@
   <table class="table-auto border-collapse w-full min-w-max" id="tableRows">
     <thead>
       <tr>
-        <!-- <th class="cardInputHead"><strong>Tipo</strong></th>
-        <th class="cardInputHead"><strong>Categoría</strong></th>
+        <th class="cardInputHead"><strong>Tipo</strong></th>
+        <!-- <th class="cardInputHead"><strong>Categoría</strong></th>
         <th class="cardInputHead"><strong>Subcategoría</strong></th> -->
         <th class="cardInputHead"><strong>Pieza del Fabricante</strong></th>
-        <!-- <th class="cardInputHead"><strong>Margen</strong></th>
-        <th class="cardInputHead"><strong>Codigo Producto</strong></th>
-        <th class="cardInputHead"><strong>Descripción</strong></th>
+        <th class="cardInputHead"><strong>Margen</strong></th>
+        <!-- <th class="cardInputHead"><strong>Codigo Producto</strong></th>
+        <th class="cardInputHead"><strong>Descripción</strong></th> -->
         <th class="cardInputHead"><strong>Cantidad</strong></th>
-        <th class="cardInputHead"><strong>Unidad de Medida</strong></th>
+        <!-- <th class="cardInputHead"><strong>Unidad de Medida</strong></th> -->
         <th class="cardInputHead"><strong>Descuento</strong></th>
-        <th class="cardInputHead"><strong>Financiamiento</strong></th>
+        <!-- <th class="cardInputHead"><strong>Financiamiento</strong></th>
         <th class="cardInputHead"><strong>Dueño</strong></th> -->
       </tr>
     </thead>
     <tbody id="tbodyRows">
       <tr>
-        <!-- <td class="cardInputData">
+        <td class="cardInputData">
           <input required type="text" name="tipo" id="tipo" />
         </td>
-        <td class="cardInputData">
+        <!-- <td class="cardInputData">
           <input required type="text" name="categoria" id="categoria" />
         </td>
         <td class="cardInputData">
@@ -30,25 +30,25 @@
         <td class="cardInputData">
           <input required type="text" name="piezaFabricante" id="piezaFabricante" />
         </td>
-        <!-- <td class="cardInputData">
+        <td class="cardInputData">
           <input required type="text" name="margen" id="margen" />
         </td>
-        <td class="cardInputData">
+        <!-- <td class="cardInputData">
           <input required type="text" name="codigoProducto" id="codigoProducto" />
         </td>
         <td class="cardInputData">
           <input required type="text" name="descripcion" id="descripcion" />
-        </td>
+        </td> -->
         <td class="cardInputData">
           <input required type="number" class="inputNumber" name="cantidad" id="cantidad" />
         </td>
-        <td class="cardInputData">
+        <!-- <td class="cardInputData">
           <input required type="text" name="unidadMedida" id="unidadMedida" />
-        </td>
+        </td> -->
         <td class="cardInputData">
           <input required type="number" class="inputNumber" name="descuento" id="descuento" />
         </td>
-        <td class="cardInputData">
+        <!-- <td class="cardInputData">
           <input required type="text" name="financiamiento" id="financiamiento" />
         </td>
         <td class="cardInputData">
