--- a/view/inputsParameters/filaParametros.ejs
+++ b/view/inputsParameters/filaParametros.ejs
@@ -2,57 +2,57 @@
   <table class="table-auto border-collapse w-full min-w-max" id="tableRows">
     <thead>
       <tr>
-        <th class="cardInputHead"><strong>Tipo</strong></th>
+        <!-- <th class="cardInputHead"><strong>Tipo</strong></th> -->
         <!-- <th class="cardInputHead"><strong>Categoría</strong></th>
         <th class="cardInputHead"><strong>Subcategoría</strong></th> -->
         <th class="cardInputHead"><strong>Pieza del Fabricante</strong></th>
         <th class="cardInputHead"><strong>Margen</strong></th>
         <!-- <th class="cardInputHead"><strong>Codigo Producto</strong></th>
         <th class="cardInputHead"><strong>Descripción</strong></th> -->
-        <th class="cardInputHead"><strong>Cantidad</strong></th>
+        <!-- <th class="cardInputHead"><strong>Cantidad</strong></th> -->
         <!-- <th class="cardInputHead"><strong>Unidad de Medida</strong></th> -->
-        <th class="cardInputHead"><strong>Descuento</strong></th>
+        <!-- <th class="cardInputHead"><strong>Descuento</strong></th> -->
         <!-- <th class="cardInputHead"><strong>Financiamiento</strong></th>
         <th class="cardInputHead"><strong>Dueño</strong></th> -->
       </tr>
     </thead>
     <tbody id="tbodyRows">
       <tr>
-        <td class="cardInputData">
-          <input required type="text" name="tipo" id="tipo" />
-        </td>
         <!-- <td class="cardInputData">
-          <input required type="text" name="categoria" id="categoria" />
+          <input required type="text" name="type" id="type" />
+        </td> -->
+        <!-- <td class="cardInputData">
+          <input required type="text" name="categoria" id="category" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="subcategoria" id="subcategoria" />
+          <input required type="text" name="subcategoria" id="subcategory" />
         </td> -->
         <td class="cardInputData">
-          <input required type="text" name="piezaFabricante" id="piezaFabricante" />
+          <input required  type="text" name="manufacturerPart" id="manufacturerPart" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="margen" id="margen" />
+          <input required class="inputNumber" type="number" name="margin" id="margin" />
         </td>
         <!-- <td class="cardInputData">
-          <input required type="text" name="codigoProducto" id="codigoProducto" />
+          <input required type="text" name="productCode" id="productCode" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="descripcion" id="descripcion" />
+          <input required type="text" name="description" id="description" />
         </td> -->
-        <td class="cardInputData">
-          <input required type="number" class="inputNumber" name="cantidad" id="cantidad" />
-        </td>
         <!-- <td class="cardInputData">
-          <input required type="text" name="unidadMedida" id="unidadMedida" />
+          <input required type="number" class="inputNumber" name="qty" id="qty" />
         </td> -->
-        <td class="cardInputData">
-          <input required type="number" class="inputNumber" name="descuento" id="descuento" />
-        </td>
         <!-- <td class="cardInputData">
-          <input required type="text" name="financiamiento" id="financiamiento" />
+          <input required type="text" name="unitMeasure" id="unitMeasure" />
+        </td> -->
+        <!-- <td class="cardInputData">
+          <input required type="number" class="inputNumber" name="discount" id="discount" />
+        </td> -->
+        <!-- <td class="cardInputData">
+          <input required type="text" name="finance" id="finance" />
         </td>
         <td class="cardInputData">
-          <input required type="text" name="dueño" id="dueño" />
+          <input required type="text" name="owner" id="owner" />
         </td> -->
         <td class="tdBoton" id="tdBoton">          
           <div class="buttonMenos">
