finalizacion de operations

--- a/view/inputsParameters/filaParametros.ejs
+++ b/view/inputsParameters/filaParametros.ejs
@@ -1,26 +1,33 @@
+
 <div>
   <table class="table-auto border-collapse w-full min-w-max" id="tableRows">
     <thead>
       <tr>
-        <!-- <th class="cardInputHead"><strong>Tipo</strong></th> -->
+        <th class="p-2 bg-[#BDD7EE]"><strong>-</strong></th>
+        <th class="cardInputHead"><strong>Tipo</strong></th>
         <!-- <th class="cardInputHead"><strong>Categoría</strong></th>
         <th class="cardInputHead"><strong>Subcategoría</strong></th> -->
         <th class="cardInputHead"><strong>Pieza del Fabricante</strong></th>
         <th class="cardInputHead"><strong>Margen</strong></th>
         <!-- <th class="cardInputHead"><strong>Codigo Producto</strong></th>
         <th class="cardInputHead"><strong>Descripción</strong></th> -->
-        <!-- <th class="cardInputHead"><strong>Cantidad</strong></th> -->
+        <th class="cardInputHead"><strong>Cantidad</strong></th>
         <!-- <th class="cardInputHead"><strong>Unidad de Medida</strong></th> -->
-        <!-- <th class="cardInputHead"><strong>Descuento</strong></th> -->
-        <!-- <th class="cardInputHead"><strong>Financiamiento</strong></th>
-        <th class="cardInputHead"><strong>Dueño</strong></th> -->
+        <th class="cardInputHead"><strong>Descuento</strong></th>
+        <th class="cardInputHead"><strong>Financiamiento</strong></th>
+        <!-- <th class="cardInputHead"><strong>Dueño</strong></th> -->
       </tr>
     </thead>
     <tbody id="tbodyRows">
       <tr>
-        <!-- <td class="cardInputData">
+        <td>
+          <div>
+            <strong>1</strong>
+          </div>
+        </td>
+        <td class="cardInputData">
           <input required type="text" name="type" id="type" />
-        </td> -->
+        </td>
         <!-- <td class="cardInputData">
           <input required type="text" name="categoria" id="category" />
         </td>
@@ -39,19 +46,19 @@
         <td class="cardInputData">
           <input required type="text" name="description" id="description" />
         </td> -->
-        <!-- <td class="cardInputData">
+        <td class="cardInputData">
           <input required type="number" class="inputNumber" name="qty" id="qty" />
-        </td> -->
+        </td>
         <!-- <td class="cardInputData">
           <input required type="text" name="unitMeasure" id="unitMeasure" />
         </td> -->
-        <!-- <td class="cardInputData">
+        <td class="cardInputData">
           <input required type="number" class="inputNumber" name="discount" id="discount" />
-        </td> -->
-        <!-- <td class="cardInputData">
-          <input required type="text" name="finance" id="finance" />
         </td>
         <td class="cardInputData">
+          <input required type="text" name="finance" id="finance" />
+        </td>
+        <!-- <td class="cardInputData">
           <input required type="text" name="owner" id="owner" />
         </td> -->
         <td class="tdBoton" id="tdBoton">          
